# twrs-dpp

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  conf.toml  license.txt  main.cpp
.github/workflows/: build.yml
cmake/: FindDPP.cmake
libs/DPP/: libdpp-10.0.13-linux-x64.deb
libs/DPP/win64/include/dpp-10.0/dpp/: appcommand.h  auditlog.h  ban.h  channel.h  cluster.h  cluster_sync_calls.h  discordclient.h  dtemplate.h  etf.h  export.h  guild.h  invite.h  message.h  once.h  permissions.h  prune.h  sslclient.h  stringops.h  sync.h  user.h  version.h  voiceregion.h  voicestate.h  wsclient.h
libs/DPP/win64/lib/dpp-10.0/: dpp-config-version.cmake  dpp-release.cmake  dpp.cmake  dpp.lib
